# warp-types

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  COLD-REVIEW-11.md  Cargo.toml  INSIGHTS.md  INTEGRATION.md  LICENSE  README.md  TODO.md  perf.data  perf.data.old  rust-toolchain.toml
.crystal-stem/audits/: AUDIT-2026-03-13.md
.crystal/audits/: AUDIT-2026-03-14.md
.github/workflows/: ci.yml  lean.yml
.review/: PROTOCOL.md  prompt-v3.md  prompt-v4.md
blog/: post.md
examples/: cub_cccl_854.rs  demo_bug_that_types_catch.rs  llvm_155682.rs  nvidia_cuda_samples_398.rs  opencv_12320.rs  picongpu_2514.rs  pytorch_98157.rs  tvm_17307.rs
examples/cuda/: CMakeLists.txt  Makefile  main.cu
examples/gpu-project/: Cargo.toml  build.rs
examples/gpu-project/my-kernels/: Cargo.toml
examples/gpu-project/my-kernels/src/: lib.rs
examples/gpu-project/src/: main.rs
include/: warp_types.h
lean/: Main.lean  README.md  WarpTypes.lean  lake-manifest.json  lakefile.toml
lean/WarpTypes/: Basic.lean  Core.lean  CoreExperiment.lean  CoreMetatheory.lean  Csp.lean  CspCoreExperiment.lean  Fence.lean  Generic.lean  Metatheory.lean  Protocol.lean  Reduce.lean  SolExperiment.lean
paper/: README.md  background.md  core-type-system.md  empirical-evidence.md  evaluation.md  extensions.md  future-and-conclusion.md  implementation.md  introduction.md  metatheory.md  paper.md  related-work.md
reproduce/: amd_mi300x_verify.hip  buggy_pattern.rs  compare_ptx.sh  compare_rust_ptx.sh  demo.sh  gpu_semantics_test.cu  reduce7_bug.cu  reduce7_typed.ptx  reduce7_typed.rs  run.sh  runpod-h200.sh  rust_ptx_typed.ptx  rust_ptx_typed.rs  typed_butterfly_kernel.ptx  typed_butterfly_kernel.rs  typed_vs_untyped.cu  typed_vs_untyped.ptx
reproduce/host/: Cargo.toml  gpu-output-2026-03-17.txt
reproduce/host/src/: main.rs
research/: CLAIM-AUDIT.md  complemented-typestate-framework.md  paper-draft.md  paper.tex  references.bib
research/esp32-blinky/: Cargo.toml  README.md  build.rs
research/esp32-blinky/.cargo/: config.toml
research/esp32-blinky/src/: main.rs
research/esp32-compiler/: Cargo.toml  MEASUREMENTS.md
research/esp32-compiler/src/: ast.rs  codegen.rs  j1.rs  lexer.rs  lib.rs  parser.rs  protocol.rs  token.rs
scripts/: check-doc-counts.sh
src/: active_set.rs  block.rs  cub.rs  data.rs  diverge.rs  dynamic.rs  fence.rs  gpu.rs  gradual.rs  lib.rs  merge.rs  platform.rs  proof.rs  shuffle.rs  simwarp.rs  sort.rs  tile.rs  warp.rs  warp_size.rs
src/research/: arbitrary_predicates.rs  borrowing.rs  coalescing.rs  cpu_gpu_session.rs  crossbar_protocol.rs  divergent_values.rs  early_exit.rs  implicit_merge.rs  inactive_lanes.rs  inter_block.rs  lane.rs  mod.rs  nested_diverge.rs  predicate_expressiveness.rs  protocol_inference.rs  recursive_protocols.rs  register_pressure.rs  scalability.rs  shared.rs  shuffle_duality.rs  soundness.rs  static_verify.rs  uniformity_inference.rs  varying_loops.rs  warp_size.rs  work_stealing.rs
tutorial/: README.md
warp-types-ballot/: Cargo.toml  README.md
warp-types-ballot/lean/: WarpTypesBallot.lean  lake-manifest.json  lakefile.toml
warp-types-ballot/lean/WarpTypesBallot/: Core.lean
warp-types-ballot/src/: lib.rs
warp-types-bitwise/: Cargo.toml  README.md
warp-types-bitwise/lean/: WarpTypesBitwise.lean  lake-manifest.json  lakefile.toml
warp-types-bitwise/lean/WarpTypesBitwise/: CUDA.lean  Rust.lean  Verilog.lean
warp-types-bitwise/src/: lib.rs
warp-types-bmc/: Cargo.toml  README.md
warp-types-bmc/src/: checker.rs  lib.rs  model.rs  phase.rs  session.rs  unroll.rs
warp-types-builder/: Cargo.toml
warp-types-builder/src/: lib.rs
warp-types-divtree/: Cargo.toml  README.md
warp-types-divtree/lean/: WarpTypesDivtree.lean  lake-manifest.json  lakefile.toml
warp-types-divtree/lean/WarpTypesDivtree/: Core.lean
warp-types-divtree/src/: lib.rs
warp-types-invariant/: Cargo.toml  README.md
warp-types-invariant/lean/: WarpTypesInvariant.lean  lake-manifest.json  lakefile.toml
warp-types-invariant/lean/WarpTypesInvariant/: Core.lean
warp-types-invariant/src/: lib.rs
warp-types-kernel/: Cargo.toml
warp-types-kernel/src/: lib.rs
warp-types-macros/: Cargo.toml
warp-types-macros/src/: lib.rs
warp-types-overflow/: Cargo.toml  README.md
warp-types-overflow/lean/: WarpTypesOverflow.lean  lake-manifest.json  lakefile.toml
warp-types-overflow/lean/WarpTypesOverflow/: Core.lean
warp-types-overflow/src/: lib.rs
warp-types-pdr/: Cargo.toml  README.md
warp-types-pdr/src/: checker.rs  cube.rs  frames.rs  lib.rs  phase.rs  session.rs
warp-types-pdr/tests/: integration.rs
warp-types-sat/: .gitignore  Cargo.toml  INSIGHTS.md  README.md  build.rs  perf.data
warp-types-sat/sat-kernels/: Cargo.toml
warp-types-sat/sat-kernels/src/: lib.rs
warp-types-sat/src/: analyze.rs  bcp.rs  bench.rs  clause.rs  clause_tile.rs  dimacs.rs  gpu_gradient.rs  gpu_launcher.rs  gradient.rs  lib.rs  literal.rs  phase.rs  restart.rs  scheduler.rs  session.rs  solver.rs  theory.rs  trail.rs  vsids.rs  watch.rs
warp-types-sat/tests/: gpu_loss.rs  kernel_fuse_profile.rs
warp-types-smt/: Cargo.toml  README.md
warp-types-smt/src/: bv.rs  combine.rs  euf.rs  formula.rs  lib.rs  phase.rs  session.rs  solver.rs  term.rs
warp-types-smt/tests/: integration.rs
