[package]
name = "warp-types"
version = "0.1.0"
edition = "2021"
authors = ["Chad Aldreda"]
description = "Type-safe GPU warp programming via linear typestate: compile-time prevention of shuffle-from-inactive-lane bugs"
license = "MIT"
repository = "https://github.com/modelmiser/warp-types"

[features]
default = []
formal-proof = [] # Enable proof module (requires std)

[dependencies]
warp-types-macros = { path = "warp-types-macros" }
warp-types-kernel = { path = "warp-types-kernel" }

[dev-dependencies]
