[workspace]
members = [".", "warp-types-builder", "warp-types-macros", "warp-types-kernel"]
exclude = ["examples/gpu-project"]

[package]
name = "warp-types"
version = "0.3.1"
edition = "2021"
rust-version = "1.75"
authors = ["Chad Aldreda"]
description = "Type-safe GPU warp programming via linear typestate: compile-time prevention of shuffle-from-inactive-lane bugs"
license = "MIT"
repository = "https://github.com/modelmiser/warp-types"

[features]
default = []
formal-proof = [] # Enable proof module (requires std)
research = []     # Enable research explorations (design-space prototypes, not production API)
warp64 = []       # AMD 64-lane wavefronts (default: NVIDIA 32-lane warps)

[dependencies]
warp-types-macros = { path = "warp-types-macros", version = "0.3.1" }
warp-types-kernel = { path = "warp-types-kernel", version = "0.3.1" }

[dev-dependencies]
