[package]
name = "warp-types-bmc"
version = "0.1.0"
edition = "2021"
authors = ["Chad Aldreda"]
description = "Phase-typed bounded model checker with compile-time depth tracking, built on warp-types-sat"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/modelmiser/warp-types"
readme = "README.md"
keywords = ["bmc", "model-checking", "sat", "typestate", "verification"]
categories = ["algorithms", "science"]

[[bin]]
name = "bmc"
path = "src/bin/bmc.rs"

[dependencies]
warp-types = { path = "..", version = "0.3.2" }
warp-types-sat = { path = "../warp-types-sat", version = "0.2.0" }
