[package]
name = "warp-types-divtree"
version = "0.1.0"
edition = "2021"
authors = ["Chad Aldreda"]
description = "Nested divergence partition tree for warp-types verification (Lean 4 library)"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/modelmiser/warp-types"
readme = "README.md"
keywords = ["lean4", "bitvector", "verification", "warp-types", "gpu"]
categories = ["science", "development-tools"]

# The primary artifact of this crate is the Lean 4 library at `lean/`.
# The Cargo crate is a minimal marker so the crate participates in the
# warp-types workspace and can be versioned/released on crates.io.
# Consumers use the Lean lemmas by adding a Lake dependency pointing at
# this directory's `lean/` subproject — see README.md.

[lib]
# Empty library — documentation-only Rust surface.
