[package]
name = "warp-types-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Chad Aldreda"]
description = "Proc macro for warp-types GPU kernel functions"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/modelmiser/warp-types"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
