[package]
name = "warp-types-macros"
version = "0.2.0"
edition = "2021"
authors = ["Chad Aldreda"]
description = "Proc macro for generating active set hierarchies"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/modelmiser/warp-types"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
